force-app/main/default/objects/Payment_Notification__c/Payment_Notification__c.object-meta.xml
<CustomObject>
    <label>Payment Notification</label>
    <nameField>
        <displayFormat>PN-{00000}</displayFormat>
        <label>Payment Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>