force-app/main/default/objects/Payment_Notification__c/fields/NotificationChannel__c.field-meta.xml
<CustomField>
    <fullName>NotificationChannel__c</fullName>
    <label>Notification Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>