force-app/main/default/objects/Payment_Notification__c/fields/NotificationType__c.field-meta.xml
<CustomField>
    <fullName>NotificationType__c</fullName>
    <label>Notification Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>예정 알림</fullName>
            </value>
            <value>
                <fullName>연체 알림</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>