force-app/main/default/objects/Payment_Notification__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <label>Payment Status</label>
    <referenceTo>PaymentStatus__c</referenceTo>
    <relationshipLabel>Payment Notifications</relationshipLabel>
    <relationshipName>Payment_Notifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>