force-app/main/default/objects/Payment_Notification__c/fields/RecipientEmail__c.field-meta.xml
<CustomField>
    <fullName>RecipientEmail__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>