force-app/main/default/objects/Payment_Notification__c/fields/ScheduledDateTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDateTime__c</fullName>
    <label>Scheduled Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>