force-app/main/default/objects/Payment_Notification__c/fields/SentDateTime__c.field-meta.xml
<CustomField>
    <fullName>SentDateTime__c</fullName>
    <label>Sent Date Time</label>
    <type>DateTime</type>
</CustomField>